Primer Commit nombre y grupo

--- a/HostingJava/web/index.xhtml
+++ b/HostingJava/web/index.xhtml
@@ -7,9 +7,14 @@
     </h:head>
     <h:body>
         <h2> Hosting Java </h2>
-        <strong> Nombre: </strong> Arianna Lizbeth Morales Duran
+        <strong> Nombre: </strong> 
         <br>
-            <strong> Grupo: </strong> ITIC901-M
+            Arianna Lizbeth Morales Duran
+        </br>
+       
+        <strong> Grupo: </strong> 
+        <br>
+            ITIC901-M
         </br>
         
     </h:body>
